--- a/data.yaml
+++ b/data.yaml
@@ -2,6 +2,8 @@ path: data2
 
 train: train
 
+val: val
+
 nc: 50
 names: [
   'cat_1', 'cat_2', 'cat_3', 'cat_4', 'cat_5', 'cat_6', 'cat_8', 'cat_9', 'cat_10', 'cat_11',
